--- a/index.html
+++ b/index.html
@@ -1,19 +1,83 @@
-<!doctype html>
-<html lang="en"> 
- <head> 
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>HTML 文件选择器</title> 
- </head> 
- <body> 
-  <h1>选择一个页面</h1> <select id="pageSelector"> <option value="card.html">card.html</option> <option value="students.html">students.html</option> </select> <button id="goButton">跳转到页面</button> 
-  <script>
+ 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML 文件选择器</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        
+        .container {
+            width: 350px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            overflow: hidden;
+            transition: transform 0.3s ease;
+            background-color: white;
+            padding: 20px;
+        }
+
+        .container:hover {
+            transform: translateY(-5px);
+        }
+
+        h1 {
+            color: #6e8efb;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #6e8efb;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #a777e3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>选择一个页面</h1>
+        <select id="pageSelector">
+            <option value="card.html">card.html</option>
+            <option value="students.html">students.html</option>
+        </select>
+        <button id="goButton">跳转到页面</button>
+    </div>
+
+    <script>
         document.getElementById('goButton').addEventListener('click', () => {
             const selectedFile = document.getElementById('pageSelector').value;
             if (selectedFile) {
                 window.location.href = selectedFile;
             }
         });
-    </script> 
- </body>
+    </script>
+</body>
 </html>
+ 
