--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
     <div class="container">
         <h1>选择一个页面</h1>
         <select id="pageSelector">
-            <option value="card.html">card.html</option>
-            <option value="students.html">students.html</option>
+            <option value="card.html">知识卡片</option>
+            <option value="timeline.html">时间线图</option>
+            <option value="students.html">学生点名</option>
         </select>
         <button id="goButton">跳转到页面</button>
     </div>
